--- a/workstation.yml
+++ b/workstation.yml
@@ -13,3 +13,9 @@
       - mongo-client
       - postgres-client
       - php-cli-env-dev
+      - php-ext-curl
+      - php-ext-mongo
+      - php-ext-mysql
+      - php-ext-postgres
+      - php-ext-mcrypt
+      - php-ext-memcached
