--- a/ansible.cfg
+++ b/ansible.cfg
@@ -21,7 +21,7 @@ sudo_user      = root
 ask_sudo_pass  = False
 
 hostfile       = hosts
-roles_path     = software
+roles_path     = roles:software
 
 # set plugin path directories here, seperate with colons
 action_plugins     = /usr/share/ansible_plugins/action_plugins
