--- a/workstation.yml
+++ b/workstation.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
-  sudo: true
-  serial: 1
+  become: root
+  become_user: true
   gather_facts: no
   roles:
     - ansible
