disable retry files generation

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -23,6 +23,8 @@ ask_sudo_pass  = False
 hostfile       = hosts
 roles_path     = roles
 
+retry_files_enabled = False
+
 # set plugin path directories here, seperate with colons
 action_plugins     = /usr/share/ansible_plugins/action_plugins
 callback_plugins   = /usr/share/ansible_plugins/callback_plugins
