New ansible tasks format

--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: install ssh config
-  copy: src=config dest=/home/{{ansible_ssh_user}}/.ssh/config
+  copy:
+    src: config
+    dest: "/home/{{ansible_user}}/.ssh/config"
