--- a/hosts.example
+++ b/hosts.example
@@ -1,1 +1,1 @@
-localhost ansible_connection=local ansible_ssh_user={{user}} ansible_ssh_pass={{pass}} ansible_sudo_pass={{sudo_pass}}
+localhost ansible_connection=local ansible_user={{user}} ansible_ssh_pass={{pass}} ansible_become_pass={{sudo_pass}}
